force-app/main/default/objects/TelevisitVendorSettings__c/TelevisitVendorSettings__c.object-meta.xml
<CustomObject>
    <label>TelevisitVendorSettings</label>
    <nameField>
        <displayFormat>TVS-{0000}</displayFormat>
        <label>TelevisitVendorSetting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TelevisitVendorSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>