force-app/main/default/objects/TelevisitVendorSettings__c/fields/By_Country__c.field-meta.xml
<CustomField>
    <fullName>By_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Country</label>
    <type>Checkbox</type>
</CustomField>